# WaxTorch

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  ANALYSIS-wax-mcp.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODEL_CONVERSION.md  Package.resolved  Package.swift  README.md  TEST-PLAN-mcp.md  gemini.md  performance_test.swift
.github/workflows/: cpp-ci.yml  dependency-integrity.yml  quality-gates.yml  release-waxmcp.yml  swift-parity-fixtures.yml  waxcore-linux.yml
Apps/TraceMacApp/: CLAUDE.md
Blink/: CLAUDE.md
Blink/SmarterKeys/: CLAUDE.md
Sources/TraceMacApp/: CLAUDE.md
Sources/Wax/: CLAUDE.md  MultimodalEmbeddingProvider.swift  StructuredMemorySession.swift  TextSearchSession.swift  VectorSearchSession.swift  Wax.swift  WaxSession.swift
Sources/WaxCLI/: AsyncRunner.swift  CLAUDE.md  EntityCommand.swift  FactsCommand.swift  HandoffCommand.swift  OutputHelpers.swift  RecallCommand.swift  RememberCommand.swift  SearchCommand.swift  StatsCommand.swift  StoreOptions.swift  StoreSession.swift  WaxCLICommand.swift  main.swift
Sources/WaxCore/: Constants.swift  Wax.swift  WaxError.swift  WaxOptions.swift  WaxWriterPolicy.swift
Sources/WaxCoreCompressionC/: wax_compression_shims.c
Sources/WaxCrashHarness/: main.swift
Sources/WaxMCPServer/: CLAUDE.md  LicenseValidator.swift  MultimodalAdapter.swift  ToolSchemas.swift  WaxMCPTools.swift  main.swift
Sources/WaxParityFixtureGenerator/: main.swift
Sources/WaxRepo/: main.swift
Sources/WaxTextSearch/: FTS5Schema.swift  FTS5SearchEngine.swift  FTS5Serializer.swift  GRDBSendable.swift  StructuredMemorySchema.swift  TextSearchPlaceholder.swift  TextSearchResult.swift
Sources/WaxVectorSearch/: MetalVectorEngine.swift  USearchSendable.swift  USearchVectorEngine.swift  VectorMetric.swift  VectorSearchEngine.swift  VectorSearchPlaceholder.swift  VectorSerializer.swift
Sources/WaxVectorSearchMiniLM/: MiniLMEmbedder.swift
Tasks/: 01-minilm-planbatchsizes-spi-hook.md  02-minilm-batch-planning-tests.md  03-minilm-planbatchsizes-clamping.md  04-run-minilm-batch-planning-tests.md  cpp-port-libtorch-context.md  cpp-port-libtorch-plan.md  diagnostic-task-docs-guidance.md  diagnostic-task-hang-benchmarks.md  diagnostic-task-optimizationcomparison.md  diagnostic-task-repro-crash.md  diagnostic-task-verification.md  fix-01-readme-snippet.md  fix-02-pdf-extraction-concurrency.md  pdf-01-context.md  pdf-02-tests.md  pdf-03-implementation.md  pdf-04-docs.md  pdf-05-review.md  ue5-llama-wax-context.md  ue5-llama-wax-plan.md  video-rag-01-context.md  video-rag-02-tests.md  video-rag-03-implementation.md  video-rag-04-docs.md  video-rag-05-review.md  wal-compaction-baseline.json  wal-compaction-investigation.md  wax-rag-performance-audit-2026-02-05.md  wax-skill-01-context.md  wax-skill-02-skill-skeleton.md  wax-skill-03-api-reference.md  wax-skill-04-templates.md  wax-skill-05-safety.md  wax-skill-06-examples.md  wax-skill-07-checklist.md  wax-skill-08-review.md  wax-skill-09-gap-fix.md  wax-skill-plan.md  wax-skill-validation-checklist.md
Tasks/oliva-ue4-blueprint-rag-plugin/: OlivaBlueprintRAG.uplugin
Tests/TraceMacAppUITests/: CLAUDE.md
Tests/WaxCLITests/: WaxCLIMemoryTests.swift
Tests/WaxCoreTests/: AsyncMutexTests.swift  BinaryCodecTests.swift  BlockingIOExecutorTests.swift  CompressionInteroperabilityTests.swift  CompressionKindTests.swift  CompressionTests.swift  CrashRecoveryTests.swift  (+34 more)
WaxDemo/: Package.resolved  Package.swift
cpp/: CMakeLists.txt  README.md  export_oliva_blueprints.bat  index_oliva.bat  index_oliva_blueprints.bat  index_ue5.bat  resume_oliva_blueprints.bat  start_llama_enrich.bat  start_wax_server.bat  wax_control.ps1
cpp/include/waxcpp/: embedding_memoizer.hpp  embeddings.hpp  fts5_search_engine.hpp  live_set_rewrite.hpp  memory_orchestrator.hpp  search.hpp  structured_memory.hpp  types.hpp  vector_engine.hpp  wax_store.hpp
cpp/mcp/: wax_mcp_server.js
cpp/scripts/: verify_submodules.py
cpp/server/: CMakeLists.txt  index_job_manager.cpp  index_job_manager.hpp  llama_cpp_embedding_provider.cpp  llama_cpp_embedding_provider.hpp  llama_cpp_generation_client.cpp  llama_cpp_generation_client.hpp  llm_fact_enricher.cpp  llm_fact_enricher.hpp  main.cpp  regex_ue5_enricher.cpp  runtime_config.cpp  ue5_chunk_manifest.cpp  ue5_chunk_manifest.hpp  ue5_filesystem_scanner.cpp  ue5_filesystem_scanner.hpp  wax_rag_handler.cpp  wax_rag_handler.hpp
cpp/src/core/: mv2s_format.cpp  mv2s_format.hpp  wal_ring.cpp  wal_ring.hpp  wax_store.cpp
cpp/src/orchestrator/: memory_orchestrator.cpp
cpp/src/rag/: embedding_memoizer.cpp  embeddings.cpp  live_set_rewrite.cpp  maintenance.cpp  search.cpp
cpp/src/text/: fts5_search_engine.cpp  structured_memory_store.cpp
cpp/src/vector/: usearch_vector_engine.cpp
cpp/tests/integration/: README.md
cpp/tests/parity/: README.md  mv2s_fixture_generator.cpp  mv2s_fixture_parity_test.cpp
cpp/tests/unit/: embeddings_test.cpp  fts5_search_engine_test.cpp  index_job_manager_test.cpp  libtorch_manifest_gate_test.cpp  live_set_rewrite_test.cpp  llama_cpp_embedding_provider_test.cpp  llama_cpp_generation_client_test.cpp  maintenance_test.cpp  memory_orchestrator_test.cpp  mv2s_format_test.cpp  mv2v_format_test.cpp  regex_ue5_enricher_test.cpp  search_test.cpp  structured_memory_store_test.cpp  ue5_chunk_manifest_test.cpp  ue5_filesystem_scanner_test.cpp  usearch_vector_engine_test.cpp  wal_ring_test.cpp  wal_ring_writer_test.cpp  wax_rag_handler_answer_test.cpp  wax_rag_handler_index_test.cpp  wax_store_verify_test.cpp  wax_store_write_test.cpp
cpp/tools/: mv2s_analyzer.cpp
docs/: THIRD_PARTY_NOTICES.md  wax-mcp-setup.md
proposals/: Plan.md  Wax-KG-Memory-Proposal.md  Wax-Structured-Memory-Implementation-Plan.md
references/: public-api.md
scripts/: build-libtorch-windows-cuda.ps1  build.bat  convert_model.py  generate-cmake.bat  generate-docs.sh
templates/: hybrid-search.md  init-store-embedder.md  maintenance.md  remember-recall-lifecycle.md  video-rag-transcripts.md
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+277 files in other folders)
